# asi-worker

./: .env-example  .gitignore  README.md  SPECIFICATION.md  build.py  pyproject.toml  test.py  wrangler.toml
.github/workflows/: build.yml
src/: router.py  worker.py
src/artifacts/: __init__.py
src/asi/: __init__.py  archetypes.py  bigrams.py  postgres.py
src/nbac/: __init__.py  archetypes.py  binary.py  model.py  postgres.py  score.py  train.py
